samples/_failures_safe/1761644749_1b2bc6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_302486fe.c: In function ‘main’:
./samples/SAFE/__tmp_302486fe.c:148:12: error: expected ‘;’ at end of input
  148 |         ret
      |            ^
      |            ;
./samples/SAFE/__tmp_302486fe.c:148:9: error: expected declaration or statement at end of input
  148 |         ret
      |         ^~~
./samples/SAFE/__tmp_302486fe.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_302486fe.c:139:9: error: label ‘cleanup’ used but not defined
  139 |         goto cleanup;
      |         ^~~~
